add wappalyzer, yacy user agents fix mj12bot user agent parsing numbers should now work in user agent marks

--- a/langs/english.json
+++ b/langs/english.json
@@ -237,10 +237,12 @@
 		"domcop":"DomCopBot",
 		"netcraft":"Netcraft",
 		"blexbot":"BLEXBot",
+		"wappalyzer":"Wappalyzer",
 		"burf":"Burf.co",
 		"aspiegel":"Aspiegel",
 		"mail_ru":"Mail.ru bot",
 		"ccbot":"CCBot",
+		"yacy":"YaCy P2P Search Engine",
 		"zgrab":"Zgrab App Scanner",
 		"cloudsystemnetworks":"Nimbostratus / Cloud System Networks",
 		"maui":"MauiBot",
