add AutoLink permission eliminate pointless arithmetic in the parser possible fix for creating group promotions
add AutoLink phrase

--- a/langs/english.json
+++ b/langs/english.json
@@ -34,6 +34,7 @@
 		"UseConvosOnlyWithMod":"Can use conversations only to contact global mods",
 		"CreateProfileReply": "Can create profile replies",
 		"AutoEmbed":"Automatically embed media they post",
+		"AutoLink":"Linkify their links",
 		
 		"ViewTopic":   "Can view topics",
 		"LikeItem":    "Can like items",
