add qwant, xenforo, twingly, linkfluence, and new toutiao user agent. add Users.CountSearch test cases. add Users.SearchOffset test cases. add more Users.Count test cases. add more Users.BulkGetByName test cases. reduce boilerplate in other tests. fix bugs in Users.CountSearch and Users.BulkGetByName

--- a/langs/english.json
+++ b/langs/english.json
@@ -205,6 +205,7 @@
 		"exabot":"Exabot",
 		"mojeek":"MojeekBot",
 		"cliqz":"Cliqzbot",
+		"qwant":"Qwant",
 		"datenbank":"Website Datenbank",
 		"sogou":"Sogou",
 		"toutiao":"Toutiao",
@@ -222,6 +223,7 @@
 		"facebook":"Facebook",
 		"apple":"AppleBot",
 		"discourse":"Discourse Forum Onebox",
+		"xenforo":"XenForo",
 		"mattermost":"Mattermost",
 		"alexa":"Alexa",
 		"lynx":"Lynx",
@@ -239,6 +241,8 @@
 		"netcraft":"Netcraft",
 		"blexbot":"BLEXBot",
 		"wappalyzer":"Wappalyzer",
+		"twingly":"Twingly",
+		"linkfluence":"Linkfluence",
 		"burf":"Burf.co",
 		"aspiegel":"Aspiegel",
 		"mail_ru":"Mail.ru bot",
