detect seostar, pandalytics, pagething user agents detect kw iso code fix suspicious req pre lines being mashed onto one line

--- a/langs/english.json
+++ b/langs/english.json
@@ -239,10 +239,13 @@
 		"surdotly":"Surdotly",
 		"domcop":"DomCopBot",
 		"netcraft":"Netcraft",
+		"seostar":"seostar.co",
+		"pandalytics":"Pandalytics",
 		"blexbot":"BLEXBot",
 		"wappalyzer":"Wappalyzer",
 		"twingly":"Twingly",
 		"linkfluence":"Linkfluence",
+		"pagething":"PageThing",
 		"burf":"Burf.co",
 		"aspiegel":"Aspiegel",
 		"mail_ru":"Mail.ru bot",
@@ -312,6 +315,7 @@
 		"kn":"Kannada",
 		"ko":"Korean",
 		"kok":"Konkani",
+		"kw":"Kuwait",
 		"ky":"Kyrgyz",
 		"lt":"Lithuanian",
 		"lv":"Latvian",
