WIP forum action code. Currently disabled. Add Http Conn Count tracking. Move more panel phrases into the panel namespace. Use a string builder in hookgen. Use Countf() in a couple of places to eliminate boilerplate. Reduce prepared stmt boilerplate in forum store with a lambda. Reduce prepared stmt boilerplate in topic.go with a lambda. Reduce prepared stmt boilerplate in group.go with a lambda. Add TestSetCreatedAt method to *Topic. Add DateOlderThanQ method to *accDeleteBuilder and *accUpdateBuilder. Add Stmt method to *accUpdateBuilder and *AccSelectBuilder. Add AccBuilder interface. Shorten variable names. Shorten extractPerm name to ep. Add avatar_visibility setting stub. Implementation coming in a later commit. Don't set an IP for installer generated posts.
Add counters_perf_tick_row hook.

Add avatar_visibility phrase.
Add avatar_visibility_label phrase.
Rename forums_no_description to forums_no_desc.
Rename panel.forums_create_description_label to panel.forums_create_desc_label.
Rename panel.forums_create_description to panel.forums_create_desc.
Rename panel_forum_description to panel.forum_desc.
Rename panel_forum_description_placeholder to panel.forum_desc_placeholder.
Add panel_debug_http_conns_label phrase.
Add panel.forum_actions_head phrase.
Add panel.forum_actions_create_head phrase.
Add panel.forum_action_run_on_topic_creation phrase.
Add panel.forum_action_run_days_after_topic_creation phrase.
Add panel.forum_action_run_days_after_topic_last_reply phrase.
Add panel.forum_action_action phrase.
Add panel.forum_action_action_delete phrase.
Add panel.forum_action_action_lock phrase.
Add panel.forum_action_action_unlock phrase.
Add panel.forum_action_action_move phrase.
Add panel.forum_action_extra phrase.
Add panel.forum_action_create_button phrase.

You will need to run the patcher / updater for this commit.

--- a/langs/english.json
+++ b/langs/english.json
@@ -56,7 +56,9 @@
 		"megapost_min_words":"Mega Post Minimum Words",
 		"meta_desc":"Meta Description",
 		"rapid_loading":"Rapid Loaded?",
-		"google_site_verify":"Google Site Verify"
+		"google_site_verify":"Google Site Verify",
+		"avatar_visibility":"Avatar Visibility",
+		"avatar_visibility_label":"Everyone,Member Only"
 	},
 
 	"PermPresets": {
@@ -479,14 +481,14 @@
 		"panel_rank_guests":"Guests",
 		"panel_rank_members":"Members",
 
-		"panel_preset_everyone":"Everyone",
-		"panel_preset_announcements":"Announcements",
-		"panel_preset_member_only":"Member Only",
-		"panel_preset_staff_only":"Staff Only",
-		"panel_preset_admin_only":"Admin Only",
-		"panel_preset_archive":"Archive",
-		"panel_preset_custom":"Custom",
-		"panel_preset_public":"Public",
+		"panel.preset_everyone":"Everyone",
+		"panel.preset_announcements":"Announcements",
+		"panel.preset_member_only":"Member Only",
+		"panel.preset_staff_only":"Staff Only",
+		"panel.preset_admin_only":"Admin Only",
+		"panel.preset_archive":"Archive",
+		"panel.preset_custom":"Custom",
+		"panel.preset_public":"Public",
 		"panel_active_hidden":"Hidden",
 
 		"panel_perms_no_access":"No Access",
@@ -693,7 +695,7 @@
 		"forum_start_one":"Start one?",
 
 		"forums_head":"Forums",
-		"forums_no_description":"No description",
+		"forums_no_desc":"No description",
 		"forums_none":"None",
 		"forums_no_forums":"You don't have access to any forums.",
 
@@ -944,26 +946,40 @@
 		"panel.forums_create_head":"Add Forum",
 		"panel.forums_create_name_label":"Name",
 		"panel.forums_create_name":"Super Secret Forum",
-		"panel.forums_create_description_label":"Description",
-		"panel.forums_create_description":"Where all the super secret stuff happens",
+		"panel.forums_create_desc_label":"Description",
+		"panel.forums_create_desc":"Where all the super secret stuff happens",
 		"panel.forums_active_label":"Active",
 		"panel.forums_preset_label":"Preset",
 		"panel.forums_create_button":"Add Forum",
 		"panel.forums_update_order_button":"Update Order",
 		"panel.forums_order_updated":"The forums have been successfully updated",
 
-		"panel_forum_head_suffix":" Forum",
-		"panel_forum_name":"Name",
-		"panel_forum_name_placeholder":"General Forum",
-		"panel_forum_description":"Description",
-		"panel_forum_description_placeholder":"Where the general stuff happens",
-		"panel_forum_active":"Active",
-		"panel_forum_preset":"Preset",
-		"panel_forum_update_button":"Update Forum",
-		"panel_forum_permissions_head":"Forum Permissions",
-		"panel_forum_edit_button":"Edit",
-		"panel_forum_short_update_button":"Update",
-		"panel_forum_full_edit_button":"Full Edit",
+		"panel.forum_head_suffix":" Forum",
+		"panel.forum_name":"Name",
+		"panel.forum_name_placeholder":"General Forum",
+		"panel.forum_desc":"Description",
+		"panel.forum_desc_placeholder":"Where the general stuff happens",
+		"panel.forum_active":"Active",
+		"panel.forum_preset":"Preset",
+		"panel.forum_update_button":"Update Forum",
+		"panel.forum_permissions_head":"Forum Permissions",
+		"panel.forum_edit_button":"Edit",
+		"panel.forum_short_update_button":"Update",
+		"panel.forum_full_edit_button":"Full Edit",
+
+		"panel.forum_actions_head":"Actions",
+		"panel.forum_actions_create_head":"Create Action",
+		"panel.forum_action_run_on_topic_creation":"Run on Topic Creation",
+		"panel.forum_action_run_days_after_topic_creation":"Run Days After Topic Creation",
+		"panel.forum_action_run_days_after_topic_last_reply":"Run Days After Topic Last Reply",
+		"panel.forum_action_action":"Action",
+		"panel.forum_action_action_delete":"Delete",
+		"panel.forum_action_action_lock":"Lock",
+		"panel.forum_action_action_unlock":"Unlock",
+		"panel.forum_action_action_move":"Move",
+		"panel.forum_action_extra":"Extra",
+		"panel.forum_action_create_button":"Create Action",
+
 		"panel_forum_delete_are_you_sure":"Are you sure you want to delete the '%s' forum?",
 
 		"panel_groups_head":"Groups",
@@ -1244,6 +1260,7 @@
 
 		"panel_debug_goroutine_count_label":"Goroutines",
 		"panel_debug_cpu_count_label":"CPUs",
+		"panel_debug_http_conns_label":"HTTP Conns",
 
 		"panel_debug_tasks":"Tasks",
 		"panel_debug_tasks_half_second":"Half Second",
